[metadata]
name = rose
version = attr: rose.__version__
author = ROSE team
description = Risk model track deformation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
	Operating System :: Unix

[options]
packages = rose
           rose.model
           rose.optimisation
           rose.post_processing
           rose.pre_process
           rose.utils
           run_rose
           rose_libs
include_package_data = True
install_requires =
    numpy==1.26.4
    scipy==1.12.0
    matplotlib==3.8.3
    tqdm==4.66.2
    solvers@git+https://github.com/PlatypusBytes/solvers.git
python_requires = >=3.9

[options.extras_require]
testing =
    pytest==8.0.2
    pytest-cov==4.1.0
    tox==4.13.0
    signalprocessing@git+https://github.com/PlatypusBytes/SignalProcessing.git
docs =
    sphinx==7.2.6
    sphinx-rtd-theme==2.0.0