[metadata]
name = rose
version = attr: rose.__version__
author = ROSE team
description = Risk model track deformation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix

[options]
packages = rose
           rose.model
           rose.optimisation
           rose.post_processing
           rose.pre_process
           rose.utils
           run_rose
           rose_libs
include_package_data = True
install_requires =
    numpy>=1.26.4
    scipy>=1.12.0
    matplotlib>=3.8.3
    tqdm>=4.66.2
    gstools>=1.6.1
    # PuggleSolvers==1.0.1
    git+https://github.com/PlatypusBytes/solvers@structure
python_requires = >=3.11

[options.extras_require]
testing =
    pytest==8.0.2
    pytest-cov==4.1.0
    tox==4.13.0
    nbmake==1.5.3
    SignalProcessingTools==1.2.4
docs =
    sphinx==7.2.6
    sphinx-rtd-theme==2.0.0
    sphinxcontrib-bibtex==2.6.2
